--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,27 @@
 .read-the-docs {
   color: #888;
 }
+
+.box {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  border: 1px solid gray;
+  border-radius: 20px;
+  padding: 5px;
+}
+.box .btns {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.box .tab{
+  width: 50%;
+  background-color: rgba(128, 128, 128, 0.516);
+  border-radius: 10px;
+  margin: 10px auto 10px auto;
+}
