--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
+#root{
+  width: auto;
+  height: 100vh
+}
+.App{
+ max-width: 700px;
+ margin: auto;
+ padding-top: 50px;
+}
+.header{
+  text-align: center;
+  font-size: 40px;
+}
+.logos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -50,7 +62,7 @@
   margin-top: 10px;
   border: 1px solid gray;
   border-radius: 20px;
-  padding: 5px;
+  padding: 20px 5px;
 }
 .box .btns {
   display: flex;
@@ -69,7 +81,12 @@
   filter: blur(2px);
 }
 @media screen and (max-width: 960px) {
+  .App{
+    padding-top: 0px;
+    padding-bottom: 50px;
+   }
   .notif .paper {
     width: 80%;
   }
+
 }
