--- a/src/components/fetchButton/index.css
+++ b/src/components/fetchButton/index.css
@@ -28,3 +28,9 @@
   .notif .paper button:hover {
     color: rgb(247, 247, 247);
   }
+  .opacity1{
+    opacity: 1;
+  }
+  .opacity05{
+    opacity: 0.5;
+  }
