--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@
 
 .box .tab {
   width: 50%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(128, 128, 128, 0.516);
   border-radius: 10px;
   margin: 10px auto 10px auto;
