--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ a:hover {
 
 *{
   box-sizing: border-box;
+  color: rgba(255, 255, 255, 0.87);
 }
 body {
   margin: 0;
@@ -21,8 +22,7 @@ body {
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+ /*  color-scheme: light dark; */
   background-color: #242424;
 
   font-synthesis: none;
