--- a/src/App.css
+++ b/src/App.css
@@ -76,9 +76,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(128, 128, 128, 0.516);
   border-radius: 10px;
   margin: 10px auto 10px auto;
+  color : #FFD369
 }
 
 .blur {
