--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,14 @@
-
-#root{
-  width: auto;
-  height: 100vh
+.App {
+  min-height: 100vh;
+  max-width: 700px;
+  margin: auto;
+  padding: 50px 0px;
 }
-.App{
- max-width: 700px;
- margin: auto;
- padding: 50px 0px;
-}
-.header{
+.header {
   text-align: center;
   font-size: 40px;
 }
-.logos{
+.logos {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,18 +74,17 @@
   align-items: center;
   border-radius: 10px;
   margin: 10px auto 10px auto;
-  color : #FFD369
+  color: #ffd369;
 }
 
 .blur {
   filter: blur(2px);
 }
 @media screen and (max-width: 960px) {
-  .App{
+  .App {
     padding: 10px 0px 90px 0px;
-   }
+  }
   .notif .paper {
     width: 80%;
   }
-
 }
