--- a/src/components/x/index.css
+++ b/src/components/x/index.css
@@ -3,4 +3,9 @@
     max-width: 700px;
     margin: auto;
     padding: 50px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px
   }
