--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,39 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+.box {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  border: 1px solid gray;
+  border-radius: 20px;
+  padding: 20px 5px;
+}
+.box .btns {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.box .tab {
+  width: 50%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  margin: 10px auto 10px auto;
+  color: #ffd369;
+}
+.middlesticky{
+  position: sticky;
+  top: 0;
+  backdrop-filter: blur(20px);
+  z-index: 3;
+}
 
 /* @media (prefers-color-scheme: light) {
   :root {
