--- a/src/components/x/index.css
+++ b/src/components/x/index.css
@@ -1,3 +1,12 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
 .X {
     min-height: 100vh;
     max-width: 700px;
@@ -8,4 +17,17 @@
     align-items: center;
     flex-direction: column;
     gap: 10px
+  }
+  .input{
+    color: black;
+    width: 360px;
+  }
+  .error{
+    border-color: red;
+  }
+  .help{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 360px;
   }
