--- a/src/components/x/index.css
+++ b/src/components/x/index.css
@@ -10,33 +10,69 @@ input[type='number'] {
   -moz-appearance: textfield;
 }
 .X {
-  min-height: 100vh;
-  width: 700px;
-  margin: auto;
-  padding: 50px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+}
+.background {
+  width: 960px;
+  border-radius: 8px;
+  padding: 10px;
+  background: linear-gradient(
+    90deg,
+    rgba(71, 184, 167, 0.34) 0%,
+    rgba(69, 255, 227, 0.344) 100%
+  );
+}
+.main {
+  padding: 24px;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0px 0px 4px rgba(255, 255, 255, 0.504);
+  border-radius: 8px;
+  background: #ffffff05;
+  background-color: rgba(211, 211, 211, 0.542);
+  display: flex;
   flex-direction: column;
-  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 .input {
   color: black;
+  border-radius: 8px;
+  height: 50px;
+  font-size: 20px;
 }
-.switch:disabled {
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.menuButton:disabled {
   opacity: 0.2;
 }
 .select {
   color: black;
+  border-radius: 8px;
+  height: 50px;
+  text-align: center;
+  font-size: 20px;
 }
 .error {
   border-color: red;
+}
+.inputs{
+  display: flex;
+  align-items: center;
+  gap: 24px
 }
 .help {
   display: flex;
   justify-content: start;
   align-items: center;
   width: 100%;
+  color:rgb(3, 55, 47)
 }
 select option {
   color: black;
@@ -44,6 +80,6 @@ select option {
 
 @media (max-width: 960px) {
   .X {
-    width: 340px;
+    width: 100%;
   }
 }
