--- a/src/components/x/index.css
+++ b/src/components/x/index.css
@@ -21,8 +21,8 @@ input[type='number'] {
   padding: 10px;
   background: linear-gradient(
     90deg,
-    rgba(71, 184, 167, 0.34) 0%,
-    rgba(69, 255, 227, 0.344) 100%
+    rgba(96, 255, 255, 0.34) 0%,
+    rgba(18, 247, 255, 0.344) 100%
   );
 }
 .main {
@@ -72,7 +72,8 @@ input[type='number'] {
   justify-content: start;
   align-items: center;
   width: 100%;
-  color:rgb(3, 55, 47)
+  color:rgb(9, 255, 165);
+  text-shadow: 0px 0px 5px rgb(0, 255, 145);
 }
 select option {
   color: black;
