--- a/src/components/x/index.css
+++ b/src/components/x/index.css
@@ -14,23 +14,14 @@ input[type='number'] {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  padding-bottom: 100px;
 }
 .background {
   border-radius: 8px;
   padding: 7px;
-  background: linear-gradient(
-    90deg,
-    rgba(0, 255, 145, 0.589) 50%,
-    rgba(111, 239, 158, 0.542) 100%
-  );
 }
 .main {
-  padding: 24px;
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0px 0px 4px rgb(255, 255, 255);
   border-radius: 8px;
-  background: #ffffff05;
-  background-color: rgba(133, 133, 133, 0.876);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -47,6 +38,7 @@ input[type='number'] {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  justify-content: center;
 }
 .menuButton:disabled {
   opacity: 0.2;
@@ -63,6 +55,8 @@ input[type='number'] {
 }
 .inputs{
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   gap: 24px
 }
@@ -71,8 +65,6 @@ input[type='number'] {
   justify-content: start;
   align-items: center;
   width: 100%;
-  color:rgb(9, 255, 165);
-  text-shadow: 0px 0px 5px rgb(0, 255, 145);
 }
 select option {
   color: black;
