--- a/src/components/y/index.css
+++ b/src/components/y/index.css
@@ -1,7 +1,8 @@
-.reducer {
+.y {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 90vh;
     gap: 50px;
 }
