--- a/src/components/layout/index.css
+++ b/src/components/layout/index.css
@@ -4,6 +4,7 @@ nav {
   width: 100%;
   z-index: 2;
   padding: 10px 0;
+  height: 65px;
 }
 nav ul {
   display: flex;
@@ -14,12 +15,19 @@ nav ul {
   margin: auto;
 }
 nav ul li button {
-    padding: 10px;
+  padding: 10px;
+}
+
+.Outlet {
+  padding-top: 65px;
 }
 
 @media screen and (max-width: 960px) {
   nav {
     bottom: 0;
     top: auto;
+  }
+  .Outlet {
+    padding-top: 0;
   }
 }
