--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ a:hover {
   color: #535bf2;
 }
 
-*{
+* {
   box-sizing: border-box;
   color: rgba(255, 255, 255, 0.87);
 }
@@ -22,7 +22,7 @@ body {
   line-height: 24px;
   font-weight: 400;
 
- /*  color-scheme: light dark; */
+  /*  color-scheme: light dark; */
   background-color: #242424;
 
   font-synthesis: none;
@@ -37,56 +37,38 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 5px;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  padding: 10px 0;
+  height: 65px;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} 
-.box {
+nav ul {
   display: flex;
-  gap: 5px;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid gray;
-  border-radius: 20px;
-  padding: 20px 5px;
-  width: 99%;
-}
-.box .btns {
-  display: flex;
   gap: 10px;
-  justify-content: center;
+  list-style: none;
+  margin: auto;
+}
+nav ul li button {
+  padding: 10px;
 }
 
-.box .tab {
-  width: 50%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  margin: 10px auto 10px auto;
-  color: #ffd369;
+.Outlet {
+  padding-top: 65px;
 }
-.middlesticky{
-  position: sticky;
-  top: 0;
-  backdrop-filter: blur(20px);
-  z-index: 3;
+
+@media screen and (max-width: 960px) {
+  nav {
+    bottom: 0;
+    top: auto;
+  }
+  .Outlet {
+    padding-top: 0;
+  }
 }
 
 /* @media (prefers-color-scheme: light) {
