--- a/src/pages/z/index.css
+++ b/src/pages/z/index.css
@@ -1,63 +1,68 @@
 .App {
-    min-height: 100vh;
-    max-width: 700px;
-    margin: auto;
-    padding: 50px 0px;
+  min-height: 100vh;
+  max-width: 700px;
+  margin: auto;
+  padding: 50px 0px;
+}
+.header {
+  text-align: center;
+  font-size: 40px;
+}
+.logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+.opacity1 {
+  opacity: 1;
+}
+.opacity05 {
+  opacity: 0.5;
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  .header {
-    text-align: center;
-    font-size: 40px;
+  to {
+    transform: rotate(360deg);
   }
-  .logos {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
   }
-  .logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
+}
+
+.card {
+  padding: 2em;
+  height: 20px;
+}
+
+.read-the-docs {
+  color: #888;
+}
+
+.blur {
+  filter: blur(2px);
+}
+@media screen and (max-width: 960px) {
+  .App {
+    padding: 10px 0px 90px 0px;
   }
-  .logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
+  .notif .paper {
+    width: 80%;
   }
-  .logo.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
-  }
-  
-  @keyframes logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-      animation: logo-spin infinite 20s linear;
-    }
-  }
-  
-  .card {
-    padding: 2em;
-    height: 20px;
-  }
-  
-  .read-the-docs {
-    color: #888;
-  }
-  
-  .blur {
-    filter: blur(2px);
-  }
-  @media screen and (max-width: 960px) {
-    .App {
-      padding: 10px 0px 90px 0px;
-    }
-    .notif .paper {
-      width: 80%;
-    }
-  }
-  
+}
