--- a/src/pages/s/index.css
+++ b/src/pages/s/index.css
@@ -1,7 +1,10 @@
-.S input {
-  color: black;
+.S {
+  margin: auto;
+  display: grid;
+  max-width: 700px;
+  gap: 1rem;
 }
 
-.S {
-  padding-bottom: 70px;
+.S input {
+  color: black;
 }
