--- a/src/pages/x/index.css
+++ b/src/pages/x/index.css
@@ -3,9 +3,7 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-* {
-  color: black;
-}
+
 input[type='number'] {
   -moz-appearance: textfield;
 }
@@ -53,12 +51,12 @@ input[type='number'] {
 .error {
   border-color: red;
 }
-.inputs{
+.inputs {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  gap: 24px
+  gap: 24px;
 }
 .help {
   display: flex;
@@ -69,5 +67,3 @@ input[type='number'] {
 select option {
   color: black;
 }
-
-
