--- a/src/pages/z/index.css
+++ b/src/pages/z/index.css
@@ -1,8 +1,8 @@
 .App {
-  min-height: 100vh;
   max-width: 700px;
   margin: auto;
-  padding: 50px 0px;
+  display: grid;
+  gap: 1rem;
 }
 .header {
   text-align: center;
@@ -57,12 +57,4 @@
 
 .blur {
   filter: blur(2px);
-}
-@media screen and (max-width: 960px) {
-  .App {
-    padding: 10px 0px 90px 0px;
-  }
-  .notif .paper {
-    width: 80%;
-  }
 }
