--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,6 +32,10 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
+#root{
+  position: relative;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
